dnl Process this file with autoconf to generate a configure script
dnl
dnl Maria configure.ac
dnl Copyright (C) 2006 Thomas Matys (tom42@users.berlios.de)
dnl
dnl This file is part of Maria.
dnl
dnl Maria is free software; you can redistribute it and/or modify
dnl it under the terms of the GNU General Public License as published by
dnl the Free Software Foundation; either version 2 of the License, or
dnl (at your option) any later version.
dnl
dnl Maria is distributed in the hope that it will be useful,
dnl but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
dnl GNU General Public License for more details.
dnl
dnl You should have received a copy of the GNU General Public License
dnl along with Maria; if not, write to the Free Software
dnl Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA

AC_INIT([maria],[0.71],[tom42@users.berlios.de])
AC_PREREQ([2.60])
AM_INIT_AUTOMAKE


AC_CONFIG_FILES([Makefile])
AC_OUTPUT
